[fix] treeselect placeholder overlapping issue;fixes #694
Former-commit-id: 2581331cf8d0f38ccd475679c83fff9b155a8aae

--- a/opsiweb/uib-components/static/css/custom.css
+++ b/opsiweb/uib-components/static/css/custom.css
@@ -575,7 +575,6 @@ tbody .col-rowactions :not(div).btn {
   background-color: var(--primary);
 }
 .treeselect .vue-treeselect__placeholder {
-  display: block;
   color:var(--placeholder);
 }
 
